@@ -1,15 +1,81 @@
 <?php
 switch ($modx->event->name) {
     case 'OnSiteRefresh':
-        /* Remove all static files OnSiteRefresh */
-        $modx->cacheManager->deleteTree(
-            $modx->getOption('statcache_path', $scriptProperties, MODX_BASE_PATH . 'statcache'),
-            array(
-                'deleteTop' => false,
-                'skipDirs' => false,
-                'extensions' => array()
-            )
-        );
+        if (!empty($regenerate)) {
+            /* Regenerate all static files OnSiteRefresh */
+            $regenQuery = $modx->newQuery('modResource');
+            $conditions = array(
+                'cacheable' => true,
+                'published' => true,
+                'class_key:IN' => array('modDocument', 'modSymLink', 'modStaticResource')
+            );
+            if (!empty($cacheTV)) {
+                $conditions[] = array("EXISTS (SELECT 1 FROM {$modx->getTableName('modTemplateVarResource')} `tvr` JOIN {$modx->getTableName('modTemplateVar')} `tv` ON `tvr`.`value` = '1' AND `tv`.`name` = {$modx->quote($cacheTV)} AND `tv`.`id` = `tvr`.`tmplvarid` WHERE `tvr`.`contentid` = `modResource`.`id`)");
+            } else {
+                $contentTypes = array();
+                if (!empty($contentTypes)) {
+                    $validContentTypes = array_walk(explode(',', $contentTypes), 'trim');
+                    $contentTypes = $validContentTypes;
+                }
+                if (!empty($mimeTypes)) {
+                    $validMimeTypes = array_walk(explode(',', strtolower($mimeTypes)), 'trim');
+                    $query = $modx->newQuery('modContentType', array('mime_type:IN' => $validMimeTypes));
+                    $query->select(array('id'));
+                    $query->prepare()->execute();
+                    $validContentTypes = $query->stmt->fetchAll(PDO::FETCH_COLUMN);
+                    if (empty($contentTypes)) {
+                        $contentTypes = $validContentTypes;
+                    } else {
+                        $contentTypes = array_intersect($contentTypes, $validContentTypes);
+                    }
+                }
+                if (!empty($skipBinaryContentTypes)) {
+                    $query = $modx->newQuery('modContentType', array('binary' => false));
+                    $query->select(array('id'));
+                    $query->prepare()->execute();
+                    $validContentTypes = $query->stmt->fetchAll(PDO::FETCH_COLUMN);
+                    if (empty($contentTypes)) {
+                        $contentTypes = $validContentTypes;
+                    } else {
+                        $contentTypes = array_intersect($contentTypes, $validContentTypes);
+                    }
+                }
+                if (!empty($contentTypes)) {
+                    $conditions['content_type:IN'] = $contentTypes;
+                }
+            }
+            $regenQuery->where($conditions);
+            $regenQuery->select(array('id'));
+            $regenQuery->prepare()->execute();
+            $resources = $regenQuery->stmt->fetchAll(PDO::FETCH_COLUMN);
+            $curl = curl_init();
+            curl_setopt($curl, CURLOPT_USERAGENT, 'MODX RegenCache');
+            curl_setopt($curl, CURLOPT_FAILONERROR, false);
+            curl_setopt($curl, CURLOPT_FOLLOWLOCATION, false);
+            curl_setopt($curl, CURLOPT_RETURNTRANSFER, true);
+            curl_setopt($curl, CURLOPT_NOBODY, true);
+            foreach ($resources as $resource) {
+                set_time_limit(0);
+                $url = $modx->makeUrl($resource, '', '', 'full');
+                if (!empty($url)) {
+                    $modx->log(modX::LOG_LEVEL_INFO, "Requesting Resource at {$url}");
+                    curl_setopt($curl, CURLOPT_URL, $url);
+                    curl_exec($curl);
+                    $modx->log(modX::LOG_LEVEL_INFO, "Updated cache for resource at {$url}");
+                }
+            }
+            curl_close($curl);
+        } else {
+            /* Remove all static files OnSiteRefresh */
+            $modx->cacheManager->deleteTree(
+                $modx->getOption('statcache_path', $scriptProperties, MODX_BASE_PATH . 'statcache'),
+                array(
+                    'deleteTop' => false,
+                    'skipDirs' => false,
+                    'extensions' => array()
+                )
+            );
+        }
         break;
     case 'OnBeforeSaveWebPageCache':
         /* Write a static version of the file before caching it in MODX */
